Removed files from directory. Not sure about the best way to organize f# projects yet.

--- a/YammerBot.FunctionalCore/YammerBot.FunctionalCore.fsproj
+++ b/YammerBot.FunctionalCore/YammerBot.FunctionalCore.fsproj
@@ -42,8 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dictionary\DictionaryService.fs" />
-    <Compile Include="Dictionary\Dictionary.fs" />
+    <Compile Include="DictionaryService.fs" />
+    <Compile Include="Dictionary.fs" />
     <None Include="Script.fsx" />
   </ItemGroup>
   <PropertyGroup>
