First cut at sexify functionality.

--- a/YammerBot.FunctionalCore.Test.Unit/YammerBot.FunctionalCore.Test.Unit.fsproj
+++ b/YammerBot.FunctionalCore.Test.Unit/YammerBot.FunctionalCore.Test.Unit.fsproj
@@ -51,7 +51,7 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dictionary\DictionaryTest.fs" />
+    <Compile Include="WordProcessorTest.fs" />
     <None Include="Script.fsx" />
     <None Include="packages.config" />
     <None Include="app.config" />
