--- a/YammerBot.FunctionalCore.Test.Unit/YammerBot.FunctionalCore.Test.Unit.fsproj
+++ b/YammerBot.FunctionalCore.Test.Unit/YammerBot.FunctionalCore.Test.Unit.fsproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandTest.fs" />
     <Compile Include="WordProcessorTest.fs" />
     <None Include="Script.fsx" />
     <None Include="packages.config" />
