--- a/YammerBot.Runner/YammerBot.Runner.csproj
+++ b/YammerBot.Runner/YammerBot.Runner.csproj
@@ -64,6 +64,10 @@
       <Project>{ef78757c-315a-4eb2-a37f-d369c6061b1a}</Project>
       <Name>YammerBot.Entity</Name>
     </ProjectReference>
+    <ProjectReference Include="..\YammerBot.FunctionalCore\YammerBot.FunctionalCore.fsproj">
+      <Project>{0584ccdf-beda-4ea6-a3fa-bcc1195c5c5b}</Project>
+      <Name>YammerBot.FunctionalCore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
