--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,13 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+
+#Database files
+Data.mdf
+Data_log.ldf
+
+#Originals
+*.orig
+
+#Configuration
+YammerBot.Runner/App.config
