--- a/YammerBot.Core/YammerBot.Core.csproj
+++ b/YammerBot.Core/YammerBot.Core.csproj
@@ -60,8 +60,10 @@
     <Compile Include="Compliment\Interface\IComplimentTextDeserializer.cs" />
     <Compile Include="Compliment\Interface\IComplimentTextTransformer.cs" />
     <Compile Include="OAuth\Implementation\OauthSessionProvider.cs" />
+    <Compile Include="OAuth\Implementation\OAuthTaskRunner.cs" />
     <Compile Include="OAuth\Implementation\OauthValueProvider.cs" />
     <Compile Include="OAuth\Interface\IOauthSessionProvider.cs" />
+    <Compile Include="OAuth\Interface\IOauthTaskRunner.cs" />
     <Compile Include="OAuth\Interface\IOauthValueProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quote\Implementation\QuoteRetriever.cs" />
@@ -78,7 +80,6 @@
     <Compile Include="System\Interface\IRandomNumberGenerator.cs" />
     <Compile Include="System\Interface\ISleeper.cs" />
     <Compile Include="System\Interface\IYammerDatabase.cs" />
-    <Compile Include="System\Interface\IYammerService.cs" />
     <Compile Include="Yammer\Implementation\YammerCommandFetcher.cs" />
     <Compile Include="Yammer\Implementation\YammerMessageDatabaseManager.cs" />
     <Compile Include="Yammer\Implementation\YammerMessageFetcher.cs" />
@@ -95,6 +96,7 @@
     <Compile Include="Yammer\Interface\IYammerMessageResponseDeserializer.cs" />
     <Compile Include="Yammer\Interface\IYammerMessageServiceManager.cs" />
     <Compile Include="Yammer\Interface\IYammerResponseFetcher.cs" />
+    <Compile Include="Yammer\Interface\IYammerService.cs" />
     <Compile Include="Yammer\Interface\IYammerTaskRunner.cs" />
   </ItemGroup>
   <ItemGroup>
